# room_reservation

./: .env_template  .gitignore  Dockerfile  README.md  docker-compose.yml  fastapi.db  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 041377bf01ed_.py  315cd9d558ab_add_user_relationship_to_reservation.py  398198e23a0b_first_migration.py  3b2a3d86daa8_first_migration.py  65f4c32afc04_add_meeting_room.py  8da385384fcc_.py  a957b318f559_add_user_model.py  b6adfb2e11d6_add_reservation_model.py  cc3bdcd31650_add_description_to_meetingroom.py
app/: main.py
app/api/: validators.py
app/api/endpoints/: meeting_room.py  reservation.py  user.py
app/api/v1/: routers.py  validators.py
app/api/v1/endpoints/: __init__.py  meeting_room.py
app/core/: base.py  config.py  crud.py  db.py  user.py
app/crud/: __init__.py  base.py  meeting_room.py  reservation.py
app/meeting_room/: crud.py
app/meeting_room/api/v1/: __init__.py  endpoints.py  validators.py
app/models/: __init__.py  meeting_room.py
app/schemas/: meeting_room.py  reservation.py  user.py
requirements/: dev.txt  prod.txt
tests/: conftest.py  test_meeting_rooms.py
