[tool.poetry]
name = "room-reservation"
version = "0.1.0"
description = ""
authors = ["LeAries <learies@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = ">=0.102,<0.110"}
sqlalchemy = ">=2.0,<2.1"
asyncpg = ">=0.28,<0.29"
alembic = ">=1.11,<1.12"
greenlet = ">=2.0,<2.1"

[tool.poetry.group.develop.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.7.0"
httpx = "^0.24.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
